--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://yarinleib:MIgWRuGaDdPoUyPg@cluster0.j7ec79y.mongodb.net/
+MONGODB_URI=mongodb+srv://yarinleib:MIgWRuGaDdPoUyPg@cluster0.j7ec79y.mongodb.net/restudiedDB
 PORT=5005
 JWT_SECRET=jwtSecret@ReStudied$2025!verySecureKey_92837
 CLOUDINARY_CLOUD_NAME=dfdzehohg
